k8s/service1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-deployment
spec:
  selector:
    matchLabels:
      app: service1
  replicas: 1
  template:
    metadata:
      labels:
        app: service1
    spec:
      restartPolicy: Always
      containers:
      - name: service1
        image: tobydeh/cote-fastify-template:service1
        imagePullPolicy: Always
